Add frontend for managing students
- hotfixes
- View users
- remove users
