# backend/swagger-spec.json
@@ -656,7 +656,30 @@
     "/classrooms/{id}/leave": {
       "put": {
         "operationId": "removeStudent",
-        "summary": "Removes a user from classroom"
+        "summary": "Removes a user from classroom",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "classrooms"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/classrooms/{id}/regenerate-token": {
@@ -676,6 +699,72 @@
         "responses": {
           "200": {
             "description": "Classroom updated with new token"
+          }
+        },
+        "tags": [
+          "classrooms"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/classrooms/{id}/students": {
+      "get": {
+        "operationId": "getStudents",
+        "summary": "Returns all students in a classroom",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of Students"
+          }
+        },
+        "tags": [
+          "classrooms"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/classrooms/{id}/students/{sid}": {
+      "delete": {
+        "operationId": "removeStudentFromClassroom",
+        "summary": "Removes a student from a classroom",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "sid",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
           }
         },
         "tags": [
